--- a/action.yml
+++ b/action.yml
@@ -16,6 +16,8 @@ inputs:
     required: True
   filename:
     default: 'coverage.json'
+  user:
+    required: True
 runs:
   using: 'docker'
   image: 'Dockerfile'
